--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsc && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,7 +18,6 @@
     "@types/react": "18.2.15",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "sass": "^1.63.6",
-    "typescript": "^5.1.6"
+    "sass": "^1.63.6"
   }
 }
